syntax = "proto3";

package auth.v1;

option go_package = "github.com/matsumo_and/dapr-work/app/proto/auth/v1;authv1";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {}
  rpc Logout(LogoutRequest) returns (LogoutResponse) {}
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string user_id = 2;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  bool success = 1;
}
